[package]
name = "rcas"
version = "0.1.0"
authors = ["willemml <willem@leit.so>"]
edition = "2021"
license = "GPL-3.0"
description = "CAS (Computer Algebra System) for no_std environements."
repository = "https://github.com/willemml/rcas"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
heapless = "0.7.14"
libm = "0.2.2"

[lib]
name = "rcas"
path = "src/lib.rs"
