[package]
name = "citrus-cas"
version = "0.0.1"
edition = "2021"
authors = ["willemml <willem@leit.so>", "Alessandra Simmons"]
license = "MIT"
description = "Pure Rust CAS (Computer Algebra System)"
repository = "https://github.com/nw-rs/citrus-cas"

[dependencies]
nom = { version = "7.1.1", default-features = false, features = ["alloc"] }
heapless = "0.7.14"
libm = "0.2.2"
indexmap = { version = "1.9.1", default-features = false }

[features]
default = ["std"]
std = ["indexmap/std"]

[lib]
name = "citrus_cas"
path = "src/lib.rs"
